--- a/css/style.css
+++ b/css/style.css
@@ -87,11 +87,13 @@ body {
 }
 
 .button-large {
+  margin-top: 25px;
   background-color: #ff69b4;
   padding: 10px 30px;
   color: white;
   cursor: pointer;
   border-radius: 10px;
+  font-size: 25px;
   border: transparent;
 }
 .button-large:hover {
